--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "yahoo-finance-rs"
+name = "yahoo-finance-api"
 version = "0.1.0"
 edition = "2021"
 
@@ -10,3 +10,6 @@ chrono = "0.4"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0"
 reqwest = {version = "0.12", features = ["blocking", "cookies"] }
+
+[dev-dependencies]
+clap = { version = "4.5", features = ["derive"] }
