--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,6 @@ reqwest = {version = "0.12", features = ["blocking", "cookies"] }
 
 [dev-dependencies]
 clap = { version = "4.5", features = ["derive"] }
+
+[lints.rust]
+dead_code = "allow"
